--- a/README
+++ b/README
@@ -8,3 +8,5 @@ To-Do:
 
 Notes:
 -Create html form for user sign up at Pennbook index.html page to push to Apache Tomcat servlet.
+
+username is the email because we are lazy. 
