seeing if dan can access

--- a/README
+++ b/README
@@ -10,3 +10,5 @@ Notes:
 -Create html form for user sign up at Pennbook index.html page to push to Apache Tomcat servlet.
 
 username is the email because we are lazy. 
+
+SUP
