--- a/README
+++ b/README
@@ -15,3 +15,6 @@ Do we want friendships to include Strenght & Type or not??
 
 Need to Finish Testing:
 getInterests, getFriends, getWallposts, uSearch, tSearch, iSearch, userCheck, addUser, postMsg, addFriend
+
+Need to do:
+Friendrecommend
